# fundis

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
fundis/: __init__.py  aerodrome.py  auth.py  cli.py  config.py  hyperliquid.py  memory.py  swidge.py  wallets.py  web3_utils.py
fundis/agents/: __init__.py  base.py  registry.py  sentichain_btc.py  sentichain_btc_hyperliquid.py  sentichain_common.py  sentichain_eth.py  sentichain_eth_hyperliquid.py
tests/: __init__.py  run_tests.py  test_integration.py  test_unit.py
