[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundis"
version = "0.1.1"
description = "Web3 trading agents powered by SentiChain sentiment data on Base network"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Edward Chen", email = "rchen@yototec.com" },
]
license = { text = "MIT" }
dependencies = [
  "typer[all]>=0.9.0,<1.0.0",
  "requests>=2.32.0,<3.0.0",
  "web3==7.12.0",
]
keywords = [
  "web3",
  "trading",
  "sentiment",
  "crypto",
  "defi",
  "base",
  "ethereum",
  "sentichain",
  "aerodrome",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Yototec/fundis"
Repository = "https://github.com/Yototec/fundis"
"Bug Tracker" = "https://github.com/Yototec/fundis/issues"

[project.scripts]
fundis = "fundis.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fundis*"]